[gd_scene load_steps=2 format=3 uid="uid://dr1x5gtnsig6g"]

[ext_resource type="Script" path="res://display/settings/settings_menu.gd" id="1_dp1xn"]

[node name="SettingsMenu" type="PopupPanel"]
size = Vector2i(600, 400)
visible = true
script = ExtResource("1_dp1xn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DisplayRoot" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DisplayRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DisplayRoot/MarginContainer"]
layout_mode = 2

[node name="Header" type="Label" parent="CanvasLayer/DisplayRoot/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DisplayRoot/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InfluxSettings" type="VBoxContainer" parent="CanvasLayer/DisplayRoot/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="InfluxHeader" type="Label" parent="CanvasLayer/DisplayRoot/MarginContainer/VBoxContainer/HBoxContainer/InfluxSettings"]
layout_mode = 2
text = "Influx"
horizontal_alignment = 1

[node name="InfluxConnect" type="Button" parent="CanvasLayer/DisplayRoot/MarginContainer/VBoxContainer/HBoxContainer/InfluxSettings"]
layout_mode = 2
size_flags_horizontal = 4
text = "Connect"

[node name="InfluxSelectDatabase" type="OptionButton" parent="CanvasLayer/DisplayRoot/MarginContainer/VBoxContainer/HBoxContainer/InfluxSettings"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true

[node name="InfluxStart" type="Button" parent="CanvasLayer/DisplayRoot/MarginContainer/VBoxContainer/HBoxContainer/InfluxSettings"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Start"
